[package]
name = "unicode-bidi-mirroring"
version = "0.3.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
description = "Unicode Bidi Mirroring property detection"
documentation = "https://docs.rs/unicode-bidi-mirroring/"
keywords = ["unicode"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/RazrFalcon/unicode-bidi-mirroring"
edition = "2018"
